[package]
name = "serialize"
version = "0.1.0"
authors = ["Taegyun Kim <k.taegyun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
handlebars = "3.1.0"
protobuf = "2.*.*"
serde = { version = "1.0", features = ["derive"] }


[build-dependencies]
protoc-rust = "2.*.*"
